# omnidrive-mcp

./: .gitignore  README.md  design_system.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-sidecar.js
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  patch_tools.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: activity.rs  folders.rs  mod.rs  sse.rs
src-tauri/src/config/: store.rs  types.rs
src-tauri/src/file_filter/: mod.rs  types.rs
src/components/activity/: ActivityLogPanel.tsx
src/components/connected/: ConnectedAppsPanel.tsx
src/components/connection/: ConnectionPanel.tsx  PairingDialog.tsx
src/components/dashboard/: FolderCard.tsx  ScanWarning.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/hooks/: useActivityLog.ts  useConnectionInfo.ts  useFolders.ts  useTheme.ts
src/lib/: tauri.ts  types.ts
src/styles/: design-system.css
test/: mcp_test_cases.md  mcp_test_report.md  mcp_test_report_extended.md
